# qual-exam

./: .gitignore  README.md  type-classes-and-families.tex  typeclasses.bib  typeclasses.sty
code/: code.cabal
code/src/: Main.hs  QualExam.hs
report/: typeclasses.bib  typeclasses.sty
