cabal-version:      2.4
name:               code
version:            0.1.0.0


-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Apoorv Ingle
maintainer:         apoorv-ingle@uiowa.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    QualExam

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.13.0.0
                    , ghc-prim >= 0.5.3
    hs-source-dirs:   src
    default-language: Haskell2010
